data/apps/argocd/kargo/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kargo
  namespace: kargo
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: traefik
  hostnames:
    - "kargo.xxx.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: kargo-api
          port: 80
